--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,21 @@
+@font-face {
+    font-family: 'icomoon';
+    src:  url('icomoon/fonts/icomoon.eot?tomleg');
+    src:  url('icomoon/fonts/icomoon.eot?tomleg#iefix') format('embedded-opentype'),
+      url('icomoon/fonts/icomoon.ttf?tomleg') format('truetype'),
+      url('icomoon/fonts/icomoon.woff?tomleg') format('woff'),
+      url('icomoon/fonts/icomoon.svg?tomleg#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
 .App {
   text-align: center;
 }
 
 .App-logo {
   height: 40vmin;
-  pointer-events: none;
+  pointer-events: none; 
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -14,7 +25,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #342828;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +46,76 @@
   to {
     transform: rotate(360deg);
   }
+}
+li {
+  list-style: none
+}
+img {
+  border: 0;
+  vertical-align: middle
+}
+
+button {
+  cursor: pointer
+}
+a {
+  color: #666;
+  text-decoration: none
+}
+
+a:hover {
+  color: #000
+}
+/* type page */
+.w {
+  width: 1200px;
+  margin: 0 auto;
+}
+.header {
+  height: 160px;
+  border-bottom: 1px solid #f1f1f1;
+}
+.logo a{
+  float: left;
+  display: block;
+  width: 300px;
+  height: 120px;
+  margin: 10px 0;
+  font-size: 0;
+  background-image: url(logo2.png);
+}
+.info {
+  float: right;
+  margin-right: 200px;
+  height: 100%;
+  width: 500px;
+}
+.info ul li a{
+  float: left;
+  padding: 10px 20px;
+  background-color: rgb(255, 255, 255);
+  margin: 40px 0;
+}
+.info .donate {
+  background-color: #c00f21;
+  color: #fff;
+  border-radius: 8px;
+}
+.acc::before {
+  content:'\e909';
+  font-family: icomoon;
+  padding-right: 2px;
+  color:#333
+}
+.search::before {
+  content:'\e986';
+  font-family: icomoon;
+  padding-right: 2px;
+  color:#333
+}
+.donate::before {
+  content:'\e91d';
+  font-family: icomoon;
+  padding-right: 4px;
+  color:#fff
 }
